# upload_image_FAQ

./: .cursorignore  .env.example  Dockerfile  docker-compose.yml  manage.py  pyproject.toml
accounts/: admin.py  apps.py  models.py  serializers.py  views.py  wecom.py
accounts/migrations/: 0001_initial.py  0002_alter_employeeprofile_options_and_more.py
audit/: admin.py  apps.py  models.py  serializers.py  services.py  views.py
audit/migrations/: 0001_initial.py  0002_alter_auditlog_options_alter_auditlog_action_and_more.py
config/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
docker/: Dockerfile.nginx  entrypoint-web.sh  nginx.conf
docs/: README.md  architecture.md  deployment.md  user-manual.md
faq/: admin.py  apps.py  models.py  serializers.py  tasks.py  views.py
faq/migrations/: 0001_initial.py  0002_alter_batchjob_options_alter_faqdraft_options_and_more.py  0003_uploadrecord_source_draft_ids.py  0004_alter_faqdraft_options_alter_faqdraft_image_and_more.py
frontend/: index.html  package.json  vite.config.ts
frontend/src/: UserManual.tsx  api.ts  main.tsx  styles.css  types.ts
integrations/: image_utils.py  llm_client.py  webhook_client.py
